# status-rln-prover

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  build.rs  config.example.toml  docker-entrypoint.sh
.github/workflows/: ci.yml  osv-scanner.yml
mock/: mock_user_1.json
proto/: prover.proto
proto/net/vac/prover/: prover.proto
prover/: Cargo.toml  build.rs
prover/benches/: multi_tree_rebalance.rs  prover_bench.rs  prover_many_subscribers.rs  user_db_heavy_write.rs
prover/src/: args.rs  epoch_service.rs  epoch_service_tests.rs  error.rs  grpc_service.rs  karma_sc.rs  karma_sc_listener.rs  lib.rs  main.rs  metrics.rs  mock.rs  proof_generation.rs  proof_service.rs  proof_service_tests.rs  registry.rs  registry_listener.rs  rln_sc.rs  rocksdb_operands.rs  rocksdb_operator.rs  rocksdb_operator_2.rs  sc.rs  tier.rs  tiers_listener.rs  user_db.rs  user_db_error.rs  user_db_serialization.rs  user_db_service.rs  user_db_tests.rs  user_db_types.rs  user_rocksdb.rs
prover/tests/: grpc_e2e.rs  multi_tree_rebalance.rs
prover_cli/: Cargo.toml
prover_cli/src/: main.rs
prover_client/: Cargo.toml  build.rs
prover_client/src/: main.rs
rln_proof/: Cargo.toml
rln_proof/benches/: generate_proof.rs  mtree_bench.rs
rln_proof/src/: lib.rs  proof.rs
smart_contract/: Cargo.toml
smart_contract/src/: common.rs  error.rs  karma_sc.rs  karma_sc_test.rs  karma_tiers.rs  karma_tiers_test.rs  lib.rs  mock.rs  rln_sc.rs  rln_sc_test.rs
smart_contract/src/bin_tests/: karma_tiers_test.rs  rln_sc_test.rs
src/: args.rs  error.rs  grpc_service.rs  main.rs  registry.rs
