[workspace]
members = [
    "rln_proof",
    "smart_contract",
    "prover",
    "prover_cli",
    "prover_client",
]
resolver = "2"

[workspace.dependencies]
ark-bn254 = { version = "0.5", features = ["std"] }
ark-serialize = "0.5"
ark-groth16 = "0.5"
ark-ff = "0.5"
url = { version = "2.5.4", features = ["serde"] }
alloy = { version = "1.0", features = ["getrandom", "sol-types", "contract", "provider-ws", "provider-anvil-node"] }
async-trait = "0.1"
derive_more = "2.0.1"
thiserror = "2.0"
# dev
criterion = { version = "0.6", features = ["async_tokio"] }


