[workspace]
members = [
    "rln_proof",
    "smart_contract",
    "prover",
    "prover_cli",
    "prover_client",
]
resolver = "2"

[workspace.dependencies]
rln = { version = "0.8.0", features = ["pmtree-ft"] }
zerokit_utils = { version = "0.6.0", features = ["pmtree-ft"] }
ark-bn254 = { version = "0.5.0", features = ["std"] }
ark-relations = { version = "0.5.1", features = ["std"] }
ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-groth16 = { version = "0.5.0", features = ["parallel"] }
ark-serialize = { version = "0.5.0", features = ["parallel"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.46", features = ["derive", "wrap_help"] }
url = { version = "2.5.7", features = ["serde"] }
alloy = { version = "1.0.27", features = [
    "getrandom",
    "sol-types",
    "contract",
    "provider-ws",
    "provider-anvil-node",
] }
async-trait = "0.1.89"
derive_more = "2.0.1"
thiserror = "2.0.16"
rustls = "0.23.31"
zeroize = "1.8"
tonic = "0.14.1"
prost = "0.14.1"
tonic-prost = "0.14.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

#[build-dependencies]
tonic-prost-build = "0.14.1"

#[dev.dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
overflow-checks = false
strip = true
incremental = false
