[workspace]
members = [
    "rln_proof",
    "smart_contract",
    "prover",
    "prover_cli",
    "prover_client",
]
resolver = "2"

[workspace.dependencies]
# rln = { version = "0.8.0", features = ["pmtree-ft"] }
rln = { git = "https://github.com/vacp2p/zerokit/", default-features = false, features = ["pmtree-ft"] }
# zerokit_utils = { version = "0.6.0", features = ["pmtree-ft"] }
zerokit_utils = { git = "https://github.com/vacp2p/zerokit/", default-features = false, features = ["pmtree-ft"] }

ark-bn254 = { version = "0.5.0", features = ["std"] }
ark-relations = { version = "0.5.1", features = ["std"] }
# ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0",  features = ["asm"] }
# ark-groth16 = { version = "0.5.0", features = ["parallel"] }
ark-groth16 = { version = "0.5.0", default-features = false, features = [] }
# ark-serialize = { version = "0.5.0", features = ["parallel"] }
ark-serialize = { version = "0.5.0", default-features = false, features = [] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
url = { version = "2.5.7", features = ["serde"] }
alloy = { version = "1.0.38", features = [
    "getrandom",
    "sol-types",
    "contract",
    "provider-ws",
    "provider-anvil-node",
] }
async-trait = "0.1.89"
derive_more = "2.0.1"
thiserror = "2.0.17"
rustls = "0.23.32"
zeroize = "1.8.2"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"

#[build-dependencies]
tonic-prost-build = "0.14.2"

#[dev.dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
strip = true
incremental = false
