[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "wrap_help"] }
tonic = { version = "0.13", features = ["gzip"] }
tonic-reflection = "*"
tonic-web = "*"
tower-http = { version = "0.6.4", features = ["cors"] }
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
alloy.workspace = true
thiserror.workspace = true
futures = "0.3"
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
bytesize = "2.0.1"
chrono = "0.4.41"
parking_lot = "0.12"
http = "*"
async-channel = "2.3.1"
rand = "0.8.5"
derive_more.workspace = true
url.workspace = true
num-bigint = "0.4"
async-trait.workspace = true
serde = { version="1", features = ["derive"] }
serde_json = "1.0"
# rocksdb = "0.23"
rocksdb = { git = "https://github.com/tillrohrmann/rust-rocksdb", branch="issues/836" }
nom = "8.0"
claims = "0.8"
clap_config = "0.1"
toml = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
metrics-util = "0.20"
rln = { git = "https://github.com/vacp2p/zerokit", features = ["pmtree-ft"] }
zerokit_utils = { git = "https://github.com/vacp2p/zerokit", package = "zerokit_utils", features = ["default"] }
rln_proof = { path = "../rln_proof" }
smart_contract = { path = "../smart_contract" }
rayon = "1.7"
zeroize.workspace = true

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
criterion.workspace = true
ark-groth16.workspace = true
tempfile = "3.20"
tracing-test = "0.2.5"

[[bench]]
name = "prover_bench"
harness = false
