[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
rln_proof = { path = "../rln_proof" }
smart_contract = { path = "../smart_contract" }
rln.workspace = true
zerokit_utils.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
tokio.workspace = true
clap.workspace = true
url.workspace = true
alloy.workspace = true
async-trait.workspace = true
derive_more.workspace = true
thiserror.workspace = true
zeroize.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tonic-reflection = "0.14.1"
tonic-web = "0.14.1"
tower-http = { version = "0.6.6", features = ["cors"] }
futures = "0.3"
bytesize = "2.0.1"
chrono = "0.4.41"
parking_lot = "0.12"
http = "1.3.1"
async-channel = "2.3.1"
rand = "0.9.2"
num-bigint = "0.4.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
rocksdb = { git = "https://github.com/tillrohrmann/rust-rocksdb", branch = "issues/836" }
nom = "8.0.0"
claims = "0.8.0"
clap_config = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
metrics-util = "0.20"
rayon = "1.10"

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
criterion.workspace = true
ark-groth16.workspace = true
tempfile = "3.21"
tracing-test = "0.2.5"

[[bench]]
name = "prover_bench"
harness = false

[[bench]]
name = "prover_many_subscribers"
harness = false
