[package]
name = "prover_client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
clap.workspace = true
alloy.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
sha2 = "0.10.9"

[build-dependencies]
tonic-prost-build.workspace = true
