[package]
name = "rln_proof"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[dependencies]
rln.workspace = true
zerokit_utils.workspace = true
ark-bn254.workspace = true
ark-relations.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "generate_proof"
harness = false
