[package]
name = "rln_proof"
version = "0.1.0"
edition = "2024"

[dependencies]
rln.workspace = true
zerokit_utils.workspace = true
ark-bn254.workspace = true
ark-relations.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
criterion.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20"
ark-std = "*"

[[bench]]
name = "generate_proof"
harness = false

[[bench]]
name = "mtree_bench"
harness = false
