[package]
name = "smart_contract"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "karma_sc_test"
path = "src/karma_sc_test.rs"

[[bin]]
name = "karma_tiers_test"
path = "src/karma_tiers_test.rs"

[[bin]]
name = "rln_sc_test"
path = "src/rln_sc_test.rs"

[dependencies]
alloy.workspace = true
url.workspace = true
async-trait.workspace = true
thiserror.workspace = true
log = "0.4.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0", features = ["derive"] }
rustls = "0.23.31"
zeroize.workspace = true

[dev-dependencies]
claims = "0.8"
